--- a/src/styles.css
+++ b/src/styles.css
@@ -13,11 +13,104 @@
 :root {
   --nav-bg: #292929;
   --content-bg: #353535;
+  --card-border-radius: 1rem;
+  --card-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 main {
   background-color: var(--content-bg);
   height: calc(100vh - 40px);
+}
+
+#content-container {
+  width: 50%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: red;
+}
+
+#today-container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: blue;
+  padding: 20px 40px;
+  gap: 20px;
+}
+
+#weather-summary-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: green;
+  padding: 20px 40px;
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--card-box-shadow);
+}
+
+#current-weather-container {
+  width: 100%;
+  display: grid;
+  grid-template-areas:
+    'heading heading'
+    'temp stats'
+    'desc stats'
+    'realfeel stats';
+  grid-template-columns: 1fr 2fr;
+  background: purple;
+  padding: 20px 40px;
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--card-box-shadow);
+}
+
+#current-weather-heading {
+  grid-area: heading;
+}
+
+#current-temp-container {
+  grid-area: temp;
+}
+
+#current-temp {
+  font-size: 2.3rem;
+}
+
+#current-temp-unit {
+  grid-area: tempunit;
+}
+
+#current-weather-desc {
+  grid-area: desc;
+  font-size: 1.1rem;
+}
+
+#current-real-feel {
+  grid-area: realfeel;
+  font-size: 0.9rem;
+}
+
+#current-stats-container {
+  grid-area: stats;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  padding-top: 10px;
+}
+
+.current-stats {
+  font-size: 0.9rem;
+}
+
+h2 {
+  font-size: 1.2rem;
 }
 
 footer {
