added icons to each hour in the hourly weather card

--- a/src/styles.css
+++ b/src/styles.css
@@ -181,6 +181,11 @@ h3 {
   user-select: none;
 }
 
+.hourly-weather-card svg {
+  width: 50px;
+  fill: white;
+}
+
 #daily-weather-container {
   display: flex;
   flex-direction: column;
