added searchbox-related styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,7 @@ main {
   width: 90%;
   display: grid;
   grid-template-areas:
+    'search search'
     'location location'
     'summary forecast'
     'current forecast'
@@ -73,6 +74,44 @@ h2 {
 
 h3 {
   font-size: 1.1rem;
+}
+
+#search-box {
+  grid-area: search;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#search-form {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 10px;
+  width: 100%;
+}
+
+#search-input {
+  font-size: 2rem;
+  padding: 5px;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  background-color: var(--nav-bg);
+}
+
+#search-btn {
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  width: 120px;
+  height: 40px;
+  border: none;
+  outline: none;
+  background-color: rgb(145, 213, 48);
+  color: white;
+  cursor: pointer;
 }
 
 #location-container {
